recursion.logo.lessons.recursion.logo.square.FourSquare.scala.code
override def run() {
  def carre() {
    avance(100)
    droite()
    avance(100)
    droite()
    avance(100)
    droite()
    avance(100)
  }
  
  carre()
  droite()
  droite()
  carre()
  droite()
  gauche()
  carre()
  gauche()
  droite()
  carre()
  droite()
  droite()
}